--- a/GroupProject-Annie's garden/FrontEnd/template.css
+++ b/GroupProject-Annie's garden/FrontEnd/template.css
@@ -11,6 +11,10 @@ body {
     height            : 100%;
     /* scroll-behavior: smooth; */
 }
+img{
+    width: 100%;
+    height: 100%;
+}
 
 p {
     margin: 0;
@@ -19,9 +23,16 @@ p {
 a {
     display        : block;
     color          : white;
+}
+a:hover{
     text-decoration: none;
 }
-
+input{
+    outline: none;
+}
+textarea{
+    outline: none;
+}
 .page {
     width     : 100%;
     position  : relative;
@@ -164,15 +175,22 @@ a {
 
 .footer_box {
     display       : flex;
-    /* align-items: flex-end; */
+    width: 1000px;
+    margin: auto;
+    justify-content: space-around;
+    
 }
 
 .footer_text {
     font-size  : 18px;
-    margin-left: 60px;
+    margin-right: 70px;
     color      : white;
-
+    display: flex;
+    flex-flow: column;
+    
+    line-height: 40px;
 }
+
 
 .mobile_use {
     display: none;
@@ -186,7 +204,7 @@ a {
 
 .footer_iconGroup {
     display     : flex;
-    margin-right: 70px;
+    margin-left: 70px;
     align-items : flex-end;
 }
 
@@ -212,6 +230,7 @@ a {
 position: relative;
 
 }
+
 /* .gmail_iconBox::after{
     content: "";
     display: none;
@@ -313,11 +332,12 @@ position: relative;
         display    : flex;
         flex-flow  : column;
         align-items: center;
+        justify-content: unset;
     }
 
     .footer_text {
         text-align : center;
-        margin-left: unset;
+        margin-right: unset;
         line-height: 30px;
     }
 
@@ -340,7 +360,7 @@ position: relative;
         margin-top: 20px;
     }
     .footer_iconGroup{
-        
+        margin-left: unset;
         margin-right: unset;
 
     }
@@ -385,9 +405,10 @@ position: relative;
     .mobile_nav_btn {
         /* display      : none; */
         width           : unset;
-        height          : 57px;
+        height          : 69px;
         padding         : 20px;
-        background-color: #9F416B;
+        /* background-color: #9F416B; */
+        background-color: #E05D7F;
         line-height     : unset;
 
 
@@ -521,9 +542,17 @@ position: relative;
       
     
     } */
-    .mobile_nav_btns div {
-        border-bottom: 2px solid #F0ABC9;
+    .mobile_afterSite::after {
+        content: "";
+        position: absolute;
+        top: 65px;
+        left: 63px;
+        height: 2px;
+        width: 80%;
+        /* background-color: #F7A9C1; */
+        border-bottom: 2px #F7A9C1 dashed;
     }
+   
 
     .mobile_nav_btns.active {
         display: block;
