--- a/GroupProject-Annie's garden/FrontEnd/template.css
+++ b/GroupProject-Annie's garden/FrontEnd/template.css
@@ -62,7 +62,7 @@ textarea {
     display         : flex;
     justify-content : space-evenly;
     align-items     : center;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.9);
     position        : fixed;
     z-index         : 999999999;
     top             : 0;
@@ -200,24 +200,27 @@ textarea {
     display    : flex;
     margin-left: 70px;
     align-items: flex-end;
+    position: relative;
+    width: 200px;
+    justify-content: space-around;
 }
 
 .footer_lineIcon {
     height      : 40px;
     width       : 40px;
-    margin-right: 15px;
+    
 }
 
 .footer_fbIcon {
     height      : 40px;
     width       : 40px;
-    margin-right: 15px;
+ 
 }
 
 .footer_igIcon {
     height      : 40px;
     width       : 40px;
-    margin-right: 15px;
+  
 
 }
 
@@ -248,6 +251,19 @@ textarea {
 .footer_gmailIcon {
     height: 40px;
     width : 40px;
+    position: relative;
+}
+.footer_gmailIcon:hover::after{
+    content: "annie0942593931567@gmail.com";
+    position: absolute;
+    top: -41px;
+    left: -155px;
+    color:black;
+    font-size: 9px;
+    background-color: white;
+    padding: 0px 3px;
+    border-radius: 10px;
+
 }
 
 .returnBut {
@@ -343,7 +359,10 @@ textarea {
         height : unset;
         padding: 35px 0px;
     }
-
+    .footer_gmailIcon:hover::after{  
+        top: -18px;
+        left: -161px; 
+    }
     .pc_use {
         display: none;
     }
@@ -439,7 +458,7 @@ textarea {
         top             : 0px;
         left            : 0px;
         background-color: #E05D7F;
-
+        opacity: .9;
         width : 46px;
         height: 100%;
     }
@@ -449,6 +468,7 @@ textarea {
         height          : 3px;
         background-color: white;
         transform       : translate(-50%, -50%);
+        border-radius: 25px;
     }
 
     .burger_decoration1 {
