--- a/GroupProject-Annie's garden/FrontEnd/template.css
+++ b/GroupProject-Annie's garden/FrontEnd/template.css
@@ -671,7 +671,7 @@ textarea {
     .extraPage_trigger.active {
         transform: translate(92px, -8px) rotate(180deg);
     }
-
+   
     .guide_extraPages.active {
         display: block;
         border : unset;
@@ -679,16 +679,17 @@ textarea {
 
 
 
-    .guide_extraPages.active div {
+    /* .guide_extraPages.active div {
         width                    : 100vw;
         background-color         : #F0ABC9;
-        /* border-bottom         : 2px solid #9F416B; */
+    
+        tr
         animation-name           : extra_btn_growth;
         animation-duration       : 1s;
         animation-iteration-count: 1;
         animation-fill-mode      : forwards;
-    }
-
+    } */
+   
     .guide_extraPages.active li {
         width                    : 100vw;
         background-color         : rgba(240, 171, 201, 0.8);
@@ -698,6 +699,7 @@ textarea {
         animation-iteration-count: 1;
         animation-fill-mode      : forwards;
     }
+
 
     @keyframes extra_btn_growth {
         from {
