--- a/GroupProject-Annie's garden/FrontEnd/template.css
+++ b/GroupProject-Annie's garden/FrontEnd/template.css
@@ -64,7 +64,7 @@ textarea {
     align-items     : center;
     background-color: rgba(255, 255, 255, 0.9);
     position        : fixed;
-    z-index         : 999999999;
+    z-index         : 999999;
     top             : 0;
     box-shadow      : 3px 3px 4px 2px rgba(0, 0, 0, 0.5);
     /* border       : 1px red solid; */
